--- a/professional-backend-structure/package.json
+++ b/professional-backend-structure/package.json
@@ -26,6 +26,7 @@
     "mongoose-aggregate-paginate-v2": "^1.1.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^8.0.1",
+    "resend": "^6.9.1",
     "socket.io": "^4.7.2"
   },
   "devDependencies": {
